--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "laravel/jetstream": "^2.12",
+        "laravel/jetstream": "^2.12"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
